## added end date for buffer runs of both instruments
## tried publishing to RPubs for the first time

--- a/timelines/2020-Season-Instrument-Timelines.html
+++ b/timelines/2020-Season-Instrument-Timelines.html
@@ -107,25 +107,22 @@ code span.ot { color: #007020; }
 </div>
 </div>
 </div>
-<div id="buffer-run-for-the-seaphox-ended-at" class="section level2">
-<h2>Buffer Run for the SeapHOx ended at</h2>
-</div>
-<div id="buffer-run-for-the-seafet-ended-at-0120-hours-utc-on-7242020" class="section level2">
-<h2>Buffer run for the SeaFET ended at 01:20 hours UTC on 7/24/2020</h2>
+<div id="buffer-run-for-the-seafet-and-seaphox-ended-at-0120-hours-utc-on-7242020" class="section level2">
+<h2>Buffer run for the SeaFET and SeapHOx ended at 01:20 hours UTC on 7/24/2020</h2>
 </div>
 <div id="baywater-bath-ph-check" class="section level2">
 <h2>Baywater Bath pH Check</h2>
 <div id="baywater-was-collected-and-mixed-to-a-salinity-of-25-psu-fresher-than-the-desired-end-salinity-so-that-instruments-could-run-long-term-in-anticipation-of-a-delayed-start.-due-to-coronavirus-restrictions-staffing-vacancies-and-research-vessel-maintenance.-instruments-were-set-up-to-be-ready-for-deployment-as-soon-as-final-approval-of-research-expeditions-were-approved." class="section level4">
 <h4>Baywater was collected and mixed to a salinity of 25 PSU, fresher than the desired end salinity so that instruments could run long term in anticipation of a delayed start. Due to coronavirus restrictions, staffing vacancies and research vessel maintenance. Instruments were set up to be ready for deployment as soon as final approval of research expeditions were approved.</h4>
 </div>
-<div id="seafet-set-in-flow-path-with-sbe16-ctd.-ctd-pumps-for-10-seconds-while-oxygen-sensor-and-fluorometer-warm-up-and-biowiper-sponges-clean-the-optical-window.-then-in-the-following-2.7-3-seconds-water-is-sampled-by-sensors-in-the-ctd.-note-the-fluorometer-is-not-in-the-flow-path.-afterwards-the-seafet-samples-with-a-20-second-offset-to-sample-water-just-after-it-is-measured-by-the-ctd." class="section level4">
-<h4>SeaFET set in flow path with SBE16 CTD. CTD pumps for 10 seconds while oxygen sensor and fluorometer warm up and biowiper sponges clean the optical window. Then in the following 2.7-3 seconds water is sampled by sensors in the CTD. Note the fluorometer is not in the flow path. Afterwards the SeaFET samples with a 20 second offset to sample water just after it is measured by the CTD.</h4>
+<div id="seafet-set-in-flow-path-with-sbe16-ctd.-ctd-pumps-for-10-seconds-while-oxygen-sensor-and-fluorometer-warm-up-and-biowiper-sponges-clean-the-optical-window.-then-in-the-following-2.7-3.0-seconds-water-is-sampled-by-sensors-in-the-ctd.-note-the-fluorometer-is-not-in-the-flow-path.-afterwards-the-seafet-samples-with-a-20-second-offset-to-sample-water-just-after-it-is-measured-by-the-ctd." class="section level4">
+<h4>SeaFET set in flow path with SBE16 CTD. CTD pumps for 10 seconds while oxygen sensor and fluorometer warm up and biowiper sponges clean the optical window. Then in the following 2.7-3.0 seconds water is sampled by sensors in the CTD. Note the fluorometer is not in the flow path. Afterwards the SeaFET samples with a 20 second offset to sample water just after it is measured by the CTD.</h4>
 </div>
 <div id="baywater-bath-run-began-for-seaphox-on-07242020-at-0404-hours-utc.-then-sampled-hourly-thereafter." class="section level3">
 <h3>Baywater bath run began for SeapHOx on 07/24/2020 at 04:04 hours UTC. Then sampled hourly thereafter.</h3>
 </div>
-<div id="baywater-bath-run-began-for-seafetctd-combo-at-0603-hours-utc.-then-sampled-hourly-thereafter." class="section level3">
-<h3>Baywater bath run began for SeaFET/CTD combo at 06:03 hours UTC. Then sampled hourly thereafter.</h3>
+<div id="baywater-bath-run-began-for-seafetctd-combo-on-07242020-at-0603-hours-utc.-then-sampled-hourly-thereafter." class="section level3">
+<h3>Baywater bath run began for SeaFET/CTD combo on 07/24/2020 at 06:03 hours UTC. Then sampled hourly thereafter.</h3>
 <div id="note-both-instruments-sampling-with-a-minute-offset-from-each-other-and-3-or-4-minutes-offset-from-the-top-of-the-hour" class="section level4">
 <h4>note both instruments sampling with a minute offset from each other and 3 or 4 minutes offset from the top of the hour</h4>
 </div>
